ffixed some  font readability issues

--- a/src/components/AboutHelp/AboutHelp.css
+++ b/src/components/AboutHelp/AboutHelp.css
@@ -5,6 +5,7 @@
 
 .about_page p {
     padding: 2%;
+    font-size: 14pt;
 }
 
 .about_page h1{
