--- a/src/components/ErrorComponent/ErrorComponent.css
+++ b/src/components/ErrorComponent/ErrorComponent.css
@@ -3,7 +3,7 @@
     color: #EFEBE9;
     margin: 0;
 }
-.page_error h3, p {
+.page_error h3, .page_error p {
     padding: 10%;
     font-family: 'Patrick Hand SC', cursive;
     font-size: xx-large;
